--- a/RoomMonitor/Base.lproj/LaunchScreen.storyboard
+++ b/RoomMonitor/Base.lproj/LaunchScreen.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arduino" translatesAutoresizingMaskIntoConstraints="NO" id="OGU-Cr-RJe">
-                                <rect key="frame" x="60" y="338" width="294" height="220.00000000000006"/>
+                                <rect key="frame" x="60" y="338" width="294" height="220"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="OGU-Cr-RJe" secondAttribute="height" multiplier="320:239" id="afm-yd-MUl"/>
                                 </constraints>
